[tool.poetry]
name = "weblate"
version = "4.10.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.6"
translate-toolkit = ">=3.5.1,<3.6.0"
GitPython = ">=2.1.15,<3.2.0"
user-agents = ">=2.0,<2.3"
Django = {version = ">=3.2,<4.1", extras = ["argon2"]}
translation-finder = ">=2.7,<3.0"
social-auth-core = {version = "4.1.0", extras = ["openidconnect"]}
djangorestframework = ">=3.11.0,<3.14.0"
social-auth-app-django = "5.0.0"
django-redis = ">=4.11.0,<6.0.0"
django-appconf = ">=1.0.3,<1.1"
siphashc = ">=1.2,<3.0"
pyahocorasick = ">=1.4,<1.5"
borgbackup = ">=1.1.9,<1.2.0"
bleach = ">=3.1.1,<5.0.0"
cssselect = ">=1.0.0,<1.2.0"
Cython = ">=0.29.14,<0.30"
diff-match-patch = "20200713"
django-compressor = ">=2.4,<3.2"
django-crispy-forms = ">=1.9.0,<1.13.0"
django-filter = ">=2.4.0,<22.0.0"
filelock = ">=3.0.0,<3.5.0"
hiredis = ">=1.0.1,<2.1.0"
html2text = ">=2019.8.11,<2020.1.17"
jellyfish = ">=0.7.2,<0.9.0,!=0.8.3,!=0.8.4,!=0.8.5,!=0.8.6,!=0.8.7,!=0.8.8"
jsonschema = ">=3.0.0,<4.4.0"
lxml = ">=4.6.3,<4.8.0"
misaka = ">=2.1.0,<2.2.0"
openpyxl = ">=2.6.0,<3.1,!=3.0.2"
Pillow = ">=6.0.0,<8.4.1"
pycairo = ">=1.15.3"
PyGObject = ">=3.27.0"
pyicumessageformat= ">=1.0.0,<1.1.0"
pyparsing = ">=3.0.5,<3.1.0"
python-dateutil = ">=2.8.1"
python-redis-lock = ">=3.6.0,<3.8.0"
requests = ">=2.20.0,<2.26.1"
sentry-sdk = ">=0.13.0,<1.6.0"
setuptools = ">=40.3.0"
weblate-language-data = ">=2021.5"
weblate-schemas = "0.7"
psycopg2 = ">=2.7.7,<2.10.0"
celery = {extras = ["redis"], version = ">=5.0.3,<5.3"}
aeidon = {version = ">=1.9.0,<1.10.0", optional = true}
"fluent.syntax" = {version = ">=0.18.1,<0.19", optional = true}
iniparse = {version = "0.5", optional = true}
phply = {version = "1.2.5", optional = true}
Pygments = ">=2.0,<3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
